--- a/package.json
+++ b/package.json
@@ -50,9 +50,13 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
+            "@tailwindcss/postcss": "^4.1.17",
             "@types/node": "^20.10.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "autoprefixer": "^10.4.22",
             "gh-pages": "^6.3.0",
+            "postcss": "^8.5.6",
+            "tailwindcss": "^4.1.17",
             "vite": "6.3.5"
       },
       "scripts": {
