--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
       "private": true,
       "homepage": "https://99zarka.github.io/Srvanaserviceplatform",
       "dependencies": {
+            "@hookform/resolvers": "^5.2.2",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -41,13 +42,14 @@
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
-            "react-hook-form": "^7.55.0",
+            "react-hook-form": "^7.66.1",
             "react-resizable-panels": "^2.1.7",
             "react-router-dom": "^7.9.5",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
-            "vaul": "^1.1.2"
+            "vaul": "^1.1.2",
+            "zod": "^4.1.12"
       },
       "devDependencies": {
             "@tailwindcss/postcss": "^4.1.17",
