--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
             "react": "^19.2.0",
-            "react-day-picker": "^8.10.1",
+            "react-day-picker": "^9.11.2",
             "react-dom": "^19.2.0",
             "react-hook-form": "^7.66.1",
             "react-redux": "^9.2.0",
             "react-resizable-panels": "^2.1.7",
             "react-router-dom": "^7.9.5",
+            "react-toastify": "^11.0.5",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
