--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
+            "framer-motion": "^12.23.25",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
@@ -45,6 +46,7 @@
             "react-day-picker": "^9.11.2",
             "react-dom": "^19.2.0",
             "react-hook-form": "^7.66.1",
+            "react-hot-toast": "^2.6.0",
             "react-redux": "^9.2.0",
             "react-resizable-panels": "^2.1.7",
             "react-router-dom": "^7.9.5",
@@ -63,7 +65,7 @@
             "gh-pages": "^6.3.0",
             "postcss": "^8.5.6",
             "tailwindcss": "^4.1.17",
-            "vite": "6.3.5"
+            "vite": "^6.4.1"
       },
       "scripts": {
             "dev": "vite",
