--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
             "@reduxjs/toolkit": "^2.10.1",
             "@types/react-router-dom": "^5.3.3",
             "class-variance-authority": "^0.7.1",
-            "clsx": "*",
+            "clsx": "^2.1.1",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
             "framer-motion": "^12.23.25",
@@ -53,7 +53,7 @@
             "react-toastify": "^11.0.5",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
-            "tailwind-merge": "*",
+            "tailwind-merge": "^3.4.0",
             "vaul": "^1.1.2",
             "zod": "^4.1.12"
       },
